# LLMShield

./: .gitignore  CHANGELOG.md  Claude.MD  LICENSE  LLMShield_PRD.md  README.md  llmshield  projectplan.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
config/: CUSTOM_RULES_GUIDE.md  ai_enrichment.yaml  code_execution_rules.yaml  detection_rules.yaml  ml_security_rules.yaml  model_backdoor_rules.yaml  secret_detection_rules.yaml
docs/: advanced_malware_detection.md  ai_enrichment.md  configuration.md  context_aware_detection.md  detailed_logging.md  development.md  malicious_payloads_research.md  malware_detection_architecture.md  ml_based_detection_proposal.md  ml_vulnerabilities.md  scanner_consolidation_plan.md  scanners.md  secret_detection_plan.md  user_guide.md
examples/: ai_enrichment_example.py  ai_enrichment_template.yaml  llmshield_config_example.yaml  yaml_config_example.py
src/llmshield/: __init__.py  __main__.py
src/llmshield/cli/: __init__.py  main.py  main_new.py  scan_directory.py
src/llmshield/core/: __init__.py  config.py  exceptions.py  logger.py
src/llmshield/enrichment/: __init__.py  base.py  configurable_provider.py  enrichment_service.py  gemini_provider.py  genai_vertex_provider.py  prompt_templates.py  vertex_provider.py  yaml_configurable_provider.py
src/llmshield/integrations/: __init__.py  huggingface.py  ollama.py
src/llmshield/parsers/: __init__.py  base.py  checkpoint_parser.py  gguf_parser.py  joblib_parser.py  json_parser.py  msgpack_parser.py  numpy_parser.py  onnx_parser.py  parser_manager.py  pickle_parser.py  pytorch_parser.py  safetensors_parser.py  tensorflow_parser.py  text_parser.py  tflite_parser.py  yaml_parser.py
src/llmshield/reports/: __init__.py
src/llmshield/scanners/: __init__.py  anomaly_scanner.py  base.py  code_scanner.py  configurable_rule_scanner.py  enhanced_code_scanner.py  entropy_scanner.py  exclusion_aware_scanner.py  exfiltration_scanner.py  heuristic_scanner.py  pattern_scanner.py  payload_signatures.py  pickle_scanner.py  pytorch_attribute_scanner.py  scanner_manager.py  secret_scanner.py  signature_scanner.py  utils.py  vulnerability_db.py  yaml_rule_scanner.py
src/llmshield/utils/: rule_builder.py
tests/: test_parsers.py  test_setup.py
